Fixed the jumpy animation due to container not absolutely fixed in position

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,26 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 100vw;
+}
+
+.center-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .outer-container {
   background: rgba(240,180,135,1);
   width: 400px;
   height: 390px;
-  margin: 10% auto;
+  margin: 50% auto;
   border-radius: 2%;
   box-shadow: -webkit-box-shadow: 1px 9px 15px 2px rgba(0,0,0,0.52);
 -moz-box-shadow: 1px 9px 15px 2px rgba(0,0,0,0.52);
 box-shadow: 1px 9px 15px 2px rgba(0,0,0,0.52);
   padding-top: 40px;
+  position: absolute;
 }
 
 .board-container {
@@ -68,8 +73,8 @@ a:hover {
 }
 
 .fade-enter {
-  opacity: 0.01;
-  visibility: visible; /*without visibility, the elements jump on fadein/fadeout */
+  opacity: 0;
+  /*visibility: visible; without visibility, the elements jump on fadein/fadeout */
 
 }
 
@@ -80,13 +85,13 @@ a:hover {
 }
 
 .fade-leave {
-  visibility: hidden;
-  opacity: 1;
+  /*visibility: hidden;*/
+  opacity: 0;
 }
 
 .fade-leave.fade-leave-active {
-  opacity: 0.01;
-  transition: all 50ms ease-out;
+  opacity: 0;
+  transition: all 400ms ease-out;
 
 }
 
@@ -113,6 +118,6 @@ a:hover {
   justify-content: space-around;
 }
 
-button {
+button, a{
   cursor: pointer;
 }
